# cream

./: Cargo.toml
.github/workflows/: publish.yml  toolchain.yml
core/: Cargo.toml
core/src/: date_time.rs  lib.rs  macros.rs  meta.rs  reference.rs  resource_type.rs  schema.rs
examples/: group_schema.json  group_type.json  smoke.rs  smoke_config.json  user_schema.json  user_type.json
macros/: Cargo.toml
macros/src/: lib.rs
src/: builder.rs  config.rs  date_time.rs  error.rs  filter.rs  json.rs  lib.rs  list.rs  macros.rs  manager.rs  meta.rs  resource_type.rs  router.rs  schema.rs  state.rs
src/filter/: parse.rs  tests.rs
src/router/: args.rs  meta.rs  retrieve.rs  update.rs
static/jsonschema/: schema.json
static/jsonschema/core/: resource_type.json  schema.json  service_provider_config.json
static/scim/core/: group.json  resource_type.json  schema.json  service_provider_config.json  user.json
static/scim/enterprise/: user.json
