[package]
name = "cream"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ijson = "0.1.4"
axum = { version = "0.7.9", features = ["macros"] }
serde_json = "1.0"
bytes = "1.0"
derive_more = { version = "1", features = ["display", "deref"] }
serde_plain = "1.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
nom = "7.1.3"
bumpalo = "3.6.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
