[workspace]
members = ["core", "macros"]

[package]
name = "cream"
version = "0.2.0"
edition = "2021"
description = "An implementation of SCIM (System for Cross-domain Identity Management)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/platformed-com/cream"
keywords = ["scim", "identity", "management", "user", "provisioning"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ijson = "0.1.4"
axum = { version = "0.7.9", features = ["macros"] }
serde_json = "1.0"
bytes = "1.0"
derive_more = { version = "1", features = ["display", "deref"] }
serde_plain = "1.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
nom = "7.1.3"
bumpalo = "3.6.0"
cream-core = { path = "core", version = "0.2", features = ["tokio"] }
cream-macros = { path = "macros", version = "0.2" }
tokio = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower-http = { version = "0.6.2", features = ["trace"] }
tower = "0.5"
