[package]
name = "cream-core"
version = "0.2.0"
edition = "2021"
description = "This crate contains the core types and traits for the `cream` crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/platformed-com/cream"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
derive_more = { version = "1", features = ["display", "deref"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", optional = true }
