[package]
name = "cream-macros"
version = "0.1.0"
edition = "2021"
description = "This crate defines procedural macros for the `cream` crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/platformed-com/cream"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
cream-core = { path = "../core", version = "0.1" }
serde = { version = "1.0" }
serde_json = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
